--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "livewire/flux": "^2.1",
         "livewire/flux-pro": "^2.1",
         "livewire/volt": "^1.7.0",
+        "maatwebsite/excel": "*",
         "pragmarx/google2fa-laravel": "^2.3",
         "pragmarx/recovery": "^0.2.1",
         "spatie/browsershot": "*",
